# jobclerk

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
api/tests/: integration.rs
db/: clean.sql  init.sql  query_handle_stuck_jobs.sql  query_take_job.sql  test.sql
lambda/: Cargo.toml
lambda/src/: main.rs
scripts/: client.py  iter.sh  run_postgres.py  run_psql.py
server/: Cargo.toml
server/examples/: server.rs
server/src/: api.rs  lib.rs  main.rs  types.rs  ui.rs
server/templates/: base.html  projects.html
server/tests/: integration.rs
server_example/: Cargo.toml
server_example/src/: main.rs
server_example/templates/: internal_error.html  project.html
templates/: projects.html
tests/: Cargo.toml
tests/src/: main.rs
tests/tests/: integration.rs
tools/: Cargo.toml  client.py  iter.sh  run_postgres.py  run_psql.py
types/: Cargo.toml
types/src/: lib.rs
