[package]
name = "jobline"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.1"
actix-web = "2.0"
anyhow = "1.0"
argh = "0.1"
askama = "0.10"
bb8 = "0.4.0"
bb8-postgres = "0.4.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
fehler = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.19"
strum_macros = "0.19"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-serde_json-1"] }