[package]
name = "jobclerk-server"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

[dependencies]
jobclerk-api = { path = "../api" }
jobclerk-types = { path = "../types" }

actix-rt = "1.1"
actix-web = "2.0"
anyhow = "1.0"
askama = "0.10"
bb8 = "0.4.0"
chrono = "0.4"
env_logger = "0.7"
fehler = "1.0"
humantime = "2.0"
log = "0.4"
thiserror = "1.0"
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-serde_json-1"] }
