[package]
name = "jobclerk-server"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

[dependencies]
jobclerk-types = { path = "../types" }

bb8 = "0.4"
bb8-postgres = "0.4"
fehler = "1.0"
log = "0.4"
rand = "0.7"
strum = "0.19"
thiserror = "1.0"
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-serde_json-1"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
serde_json = "1.0"
tokio = "0.2"
