[package]
name = "jobclerk-server"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

[dependencies]
jobclerk-types = { path = "../types" }

askama = "0.10"
bb8 = "0.4"
bb8-postgres = "0.4"
chrono = { version = "0.4", features = ["serde"] }
fehler = "1.0"
humantime = "2.0"
log = "0.4"
rand = "0.7"
serde_json = "1.0"
strum = "0.19"
thiserror = "1.0"
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-serde_json-1"] }

[dev-dependencies]
env_logger = "0.7"
tokio = "0.2"
