[package]
name = "jobclerk-tools"
version = "0.1.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
argh = "0.1"
fehler = "1.0"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = { version = "0.5", features = ["with-chrono-0_4", "with-serde_json-1"] }
